...

  return (
    <SafeAreaView style={styles.safeArea}>
      <View style={styles.e2eNavBar}>
        <E2ENavButton
          onPress={scrollToTop}
          testID="e2e-nav-top"
          title="Jump to Top"
        />
        <E2ENavButton
          onPress={() => scrollToSection("crashHistory")}
          testID="e2e-nav-crash-history"
          title="Jump to Crash History"
...
          title="Runtime Snapshot"
          titleTestID="section-runtime-snapshot"
        >
          <InfoRow
            label="Bundle ID"
            value={runtimeSnapshot.bundleId}
            valueTestID="runtime-bundle-id"
          />
          <InfoRow
            label="Manifest Bundle ID"
            value={runtimeSnapshot.manifest.bundleId}
          />
          <InfoRow
...
          title="Actions"
          titleTestID="section-actions"
        >
          <Text
            selectable
            style={styles.actionResult}
            testID="current-channel-summary"
          >
            Current Channel Summary: {channelSummary}
          </Text>
          <Text
            selectable
            style={styles.actionResult}
...
