appId: ${APP_ID}
---
- runScript:
    file: ../../scripts/control.js
    env:
      ACTION: prepareAppLaunch
      CONTROL_URL: ${CONTROL_URL}
- launchApp
- waitForAnimationToEnd:
    timeout: 2000
- retry:
    maxRetries: 3
    commands:
      - runScript:
          file: ../../scripts/control.js
          env:
            ACTION: ensureAppForeground
            CONTROL_URL: ${CONTROL_URL}
      - tapOn:
          id: android:id/aerr_wait
          optional: true
      - tapOn:
          text: Wait
          optional: true
      - waitForAnimationToEnd:
          timeout: 1000
      - tapOn:
          id: android:id/aerr_wait
          optional: true
      - tapOn:
          text: Wait
          optional: true
      - tapOn:
          id: e2e-nav-top
          optional: true
      - waitForAnimationToEnd:
          timeout: 1000
      - tapOn:
          id: android:id/aerr_wait
          optional: true
      - tapOn:
          text: Wait
          optional: true
      - scrollUntilVisible:
          element:
            id: runtime-bundle-id
          direction: DOWN
          timeout: 10000
      - extendedWaitUntil:
          visible:
            id: runtime-bundle-id
          timeout: 30000
      - assertVisible:
          id: runtime-bundle-id
