appId: ${APP_ID}
---
- tapOn:
    id: android:id/aerr_wait
    optional: true
- tapOn:
    text: Wait
    optional: true
- tapOn:
    id: e2e-nav-top
    optional: true
- waitForAnimationToEnd:
    timeout: 1000
- scrollUntilVisible:
    element:
      id: current-channel-summary
    direction: DOWN
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: current-channel-summary
    timeout: 10000
